<resources>
    <string name="app_name" translatable="false">€asy$plit</string>
    <string name="action_settings">Settings</string>
    <string name="action_invite">Invite</string>

    <string name="action_leave">Leave group</string>
    <string name="leave_confirm_title">Leave group?</string>
    <string name="leave_confirm_message">Are you sure you want to leave this group?</string>
    <string name="balance_problem_title">Can\'t leave group!</string>
    <string name="balance_problem_message">Your balance must be zero for you to leave this group!</string>


    <string name="unsaved_confirm_title">Unsaved changes</string>
    <string name="unsaved_confirm_message">There are unsaved changes. Are you sure you want to leave?</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="okay">OK</string>


    <string name="title_activity_add_expenses">AddExpenses</string>

    <string-array name="CurrencyListItem">
        <item>EUR</item>
        <item>USD</item>
    </string-array>

    <string name="title_activity_add_expenses_check_box">AddExpenses_checkBox</string>

    <string name="title_activity_group_balance_dummy">Group balance</string>
    <string name="paid_by">Paid by</string>
    <string name="on_date">on</string>
    <string name="tab_name_members">Members</string>
    <string name="tab_name_balance">Balance</string>
    <string name="tab_name_expenses">Expenses</string>
    <string name="tab_name_payments">Payments</string>
    <string name="tab_name_payments_message">Has payed </string>

    <string name="your_groups">Your groups</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="name_loginUser">Name</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in </string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">The email address is invalid.</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_invite_person">Invite a person</string>
    <string name="action_create_group">Create group</string>
    <string name="action_edit_group">Edit</string>
    <string name="message_fetching_expense">We\'re loading the expense\'s data...</string>
    <string name="action_delete_expense">Delete</string>
    <string name="title_confirm">Are you sure?</string>
    <string name="message_confirm_delete_expense">Do you want to delete this expense?</string>
    <string name="button_delete">Delete</string>
    <string name="button_cancel">Cancel</string>
    <string name="title_error_dialog">Error</string>
    <string name="balance_debtor">Debtor</string>
    <string name="balance_creditor">Creditor</string>
    <string name="caught_up">Caught up</string>
    <string name="balance_debtor_message">This member has to receive from %s:</string>
    <string name="balance_creditor_message">This member has to give back to %s:</string>

    <!--Strings related to group creation -->
    <string name="title_new_group">New group</string>

    <string name="permission_imei">Accept for receiving notifications</string>
    <!--Strings related to PushUp Notifications-->
    <string name="new_expense_notification">New Expense Added</string>
    <string name="action_logout">Log in as another user</string>
    <string name="action_name_group_edit">Edit details</string>
    <string name="hint_name_of_group">Name of the group</string>
    <string name="currency">Currency:</string>
    <string name="currency_change_warning">The currency can only be changed if everybody is caught up!</string>
    <string name="expense_modified">Expense modified</string>
    <string name="expense_deleted">Expense deleted</string>
    <string name="join_group">Join the new group</string>
    <string name="new_group_created">You have been added</string>
    <string name="text_title">Title</string>
    <string name="save">Save</string>
    <string name="title_edit_expenes">Edit expense</string>
    <string name="currency_EUR">Euro</string>
    <string name="currency_USD">US dollar</string>
    <string name="currency_JPY">Japanese Yen</string>
    <string name="currency_GBP">British Pound</string>
    <string name="currency_AUD">Australian dollar</string>
    <string name="currency_CAD">Canadian dollar</string>
    <string name="currency_CHF">Swiss franc</string>
    <string name="currency_CNY">Chinese yuan</string>
    <string name="currency_SEK">Swedish krona</string>
    <string name="currency_NZD">New Zealand dollar</string>
    <string name="currency_MXN">Mexican peso</string>
    <string name="currency_SGD">Singapore dollar</string>
    <string name="currency_HKD">Hong Kong dollar</string>
    <string name="currency_NOK">Norwegian krone</string>
    <string name="currency_KRW">South Korean won</string>
    <string name="currency_TRY">Turkish lira</string>
    <string name="currency_RUB">Russian ruble</string>
    <string name="currency_INR">Indian rupee</string>
    <string name="currency_BRL">Brazilian real</string>
    <string name="currency_ZAR">South African rand</string>
    <string name="activity_label_user_profile">User profile</string>
    <string name="edit">Edit</string>
    <string name="error_profile_pic">Can\'t get profile picture!</string>
    <string name="title_activity_payment">Payment</string>
    <!--String related to Payment-->
    <string name="wanna_pay">wants pay to</string>
    <string name="title_activity_payment_details">PaymentDetailsActivity</string>
    <string name="to_payment">to</string>
    <string name="standard_payment">Payment realized</string>
    <string name="message_confirm_delete_payment">Do you want to delete this payment?</string>
    <string name="payment_received">Payment received</string>
    <string name="payment_deleted">Payment deleted by</string>
    <string name="error_network_problem">We\'re having some network problems! Please try again later</string>
    <string name="error_generic_title">Sorry!</string>
    <string name="error_network_problem_2">The network is acting up… Maybe you can try again later?</string>
    <string name="error_network_retry">Mh, the network is acting up, let\'s try again…</string>
    <string name="error_database_generic">We\'re having some problems with our database…</string>
    <string name="error_validate_title_empty">Title should not be empty!</string>
    <string name="error_validate_email_or_password_empty">Email and password should not be empty!</string>
    <string name="error_validate_email">Email should not be empty!</string>
    <string name="text_choose_group_name">Choose the name of this group</string>
    <string name="text_group_name_examples">e.g. Trip, Flat, …</string>
    <string name="text_choose_currency">What currency will you use?</string>
    <!--String related to Group-->
    <string name="fusing_gb_own">You have to own</string>
    <string name="fusing_gb_receive">You have to receive</string>
    <string name="fusing_gb_total">Total balance</string>
    <string name="action_fusing_gb">Merge all balances</string>
    <string name="message_progress_bar_during_fusing">Merging all balances</string>
    <string name="not_logged_in">(not logged in)</string>
    <string name="text_no_groups">We can\'t see any of your groups!</string>
    <string name="warning_not_connected_compute">Beware! We\'re not connected to the Internet, so the data you see are based on what little we know at the moment.\n\nPlease connect to the Internet to get the correct sums, with the correct currency.</string>
    <string name="error_conversion_require_connection">Connection is required for conversion!</string>
    <string name="text_unknown">\?</string>
    <string name="text_expense_unavailable_offline">This expense is currently unavailable offline!</string>
    <string name="error_cant_leave_group_Offline">You can\'t leave groups while you\'re offline!</string>
    <string name="invite_succeeded">Invited with success</string>
</resources>
