<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreationGroup">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">
            <ImageView
                android:id="@+id/valid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="16dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:src="@drawable/ic_check_circle_deep_orange_400_36dp" />
            </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>
    <LinearLayout
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/choosename"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/text_choose_group_name"
            android:textSize="18sp"/>
        <EditText
            android:id="@+id/nameGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_group_name_examples"
            android:drawableRight="@drawable/ic_write"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:text="@string/text_choose_currency"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/currencySpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:gravity="end"
            android:paddingBottom="12sp"
            android:paddingTop="12sp"
            android:spinnerMode="dialog"
            android:textAlignment="textEnd" />

    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
